--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -15,7 +15,7 @@ body{
 
 .main-card{
     height: 50%;
-    width: 50%;
+    width: 70vh;
     padding: 2rem;
 
     display: flex;
@@ -23,7 +23,7 @@ body{
     justify-content: center;
     align-items:flex-start;
 
-    border-radius: 10px;
+    border-radius: 10px 0 0 10px;
     color: #d08;
     font-size: 2.5rem;
     background-color: #2f7;
@@ -35,4 +35,63 @@ h2{
 p{
     display: flex;
     justify-content: space-between;
+}
+
+.map{
+    height: 50%;
+    width: 70vh;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    background-color: #fff;
+
+    transition: all 300ms ease-in-out;
+}
+
+.hidden{
+    visibility: hidden;
+    width: 0;
+}
+
+.map-btn{
+    height: 50%;
+    width: 1rem;
+    border-radius: 0 10px 10px 0;
+
+    color: #333;
+    background-color: #2f7;
+    border: none;
+
+    transition: all 300ms ease-in-out;
+}
+
+.map-btn:hover{
+    color: #ccc;
+    background-color: #2a7;
+}
+
+@media (max-width: 767px) {
+    body{
+        flex-direction: column;
+    }
+    .main-card{
+        height: 40%;
+        border-radius: 10px 10px 0 0;
+    }
+    .map-btn{
+        height: 1rem;
+        width: 70vh;
+        border-radius: 0 0 10px 10px;
+    }
+    
+    .map-btn{
+        color: #ccc;
+        background-color: #2a7;
+    }
+
+    .hidden{
+        height: 0;
+    }
 }
